simulation-wasm/test_output_2.txt
warning: unused import: `uuid::Uuid`
 --> src/simulation.rs:2:5
  |
2 | use uuid::Uuid;
  |     ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `players_with_state`
   --> src/simulation.rs:257:13
    |
257 |     let mut players_with_state: Vec<Combattant> = players.iter().flat_map(|player| {
    |             ^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_players_with_state`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/simulation.rs:257:9
    |
257 |     let mut players_with_state: Vec<Combattant> = players.iter().flat_map(|player| {
    |         ----^^^^^^^^^^^^^^^^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

   Compiling simulation-wasm v0.1.0 (/Users/max/Rust/Battlesim2/simulation-wasm)
warning: `simulation-wasm` (lib) generated 3 warnings (run `cargo fix --lib -p simulation-wasm` to apply 2 suggestions)
error[E0308]: mismatched types
   --> src/./simulation_test.rs:251:44
    |
251 |         let aggregated = aggregate_results(&res);
    |                          ----------------- ^^^^ expected `&[Vec<EncounterResult>]`, found `&Vec<EncounterResult>`
    |                          |
    |                          arguments to this function are incorrect
    |
    = note: expected reference `&[Vec<model::EncounterResult>]`
               found reference `&Vec<model::EncounterResult>`
note: function defined here
   --> src/simulation.rs:45:8
    |
 45 | pub fn aggregate_results(results: &[SimulationResult]) -> Vec<Round> {
    |        ^^^^^^^^^^^^^^^^^ ----------------------------

warning: unused variable: `agg_caster`
   --> src/./simulation_test.rs:190:13
    |
190 |         let agg_caster = &agg_round.team1[0];
    |             ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_agg_caster`

warning: unused variable: `agg_target`
   --> src/./simulation_test.rs:191:13
    |
191 |         let agg_target = &agg_round.team1[1];
    |             ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_agg_target`

warning: variable does not need to be mutable
   --> src/./simulation_test.rs:137:13
    |
137 |         let mut caster = create_dummy_combattant("Caster", caster_id);
    |             ----^^^^^^
    |             |
    |             help: remove this `mut`

warning: variable does not need to be mutable
   --> src/./simulation_test.rs:138:13
    |
138 |         let mut target = create_dummy_combattant("Target", target_id);
    |             ----^^^^^^
    |             |
    |             help: remove this `mut`

For more information about this error, try `rustc --explain E0308`.
warning: `simulation-wasm` (lib test) generated 7 warnings (3 duplicates)
error: could not compile `simulation-wasm` (lib test) due to 1 previous error; 7 warnings emitted
